# pythonProjectTemplate

./: .gitignore  LICENSE  main.py  pyproject.toml
config/: conf.py  logConfig.json
example/: log.py
log/: my_app.log.jsonl
