[tool.poetry]
name = "autodoc"
version = "0.1.0"
description = ""
authors = ["DeathShort <candyplus@126.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "ts"
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true
secondary = false